Fix spacing on headings and list

--- a/css/ui/modules/_post-list.scss
+++ b/css/ui/modules/_post-list.scss
@@ -1,11 +1,7 @@
 .post-list {
-  padding: 25px 0 0 0;
+  padding: 0;
   margin: 0;
   list-style: none;
-
-  h2 {
-    line-height: 1;
-  }
 
   li {
     margin-bottom: 30px;
